# python

./: Cargo.toml  makefile
docs/: conf.py  index.rst
examples/spdkit-bbm-cifs/: README  add-new-worker.chess
examples/spdkit-bbm-cifs/scripts/: add-new-worker.sh  generate-potcar-from-poscar.py  new-interactive-job.sh  run-jobs.py  run.sh
examples/spdkit-bbm-cifs/vasp-opt-bbm/: .env  INCAR  KPOINTS  POTCAR  input.tera  submit.sh
examples/spdkit-bbm-cifs/vasp-opt-bbm/pot/: C  Fe
scripts/: spdkit-view
spdkit/: __init__.py
src/: analysis.rs  apps.rs  db.rs  gosh.rs  gui.rs  htc.rs  io.rs  lib.rs  surface.rs  utils.rs
vasp-templates/: README.md
vasp-templates/freq/: INCAR.jinja
vasp-templates/md/: INCAR.jinja
vasp-templates/opt/: INCAR.jinja
vasp-templates/sp/: INCAR.jinja
