# [[file:spdkit-python.note::e345323a][e345323a]]
[package]
name = "spdkit-python"
version = "0.1.12"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "structure prediction kit for python"
license = "GPL-3.0"
homepage = "https://github.com/gosh-rs/gosh"
repository = "https://github.com/gosh-rs/gosh"

[dependencies]
gut = { version = "0.4.4", package = "gchemol-gut" }
spdkit = { version = "0.1.1" }
spdkit-surface = { version = "0.1.1", features = ["adhoc"] }
educate = { version = "0.1", features = ["adhoc"] }
distances = { version = "0.1", features = ["adhoc"] }
gchemol = { version = "0.1", features = ["adhoc"] }
gchemol-parser = { version = "0.4", features = ["adhoc"] }
plotly = "0.8.3"
tabled = "0.10.0"
gosh = { version = "0.2.0", features = ["adhoc"] }
serde_json = "1"
rxview = { version = "0.1", features = ["adhoc"] }
minima-hopping = { version = "0.0.35", features = ["adhoc"] }
pythonize = "0.18.0"
surface = { version = "0.0.35", features = ["adhoc"] }
# qsubmit = { version = "0.1" }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }

[dev-dependencies]
criterion = "0.4"

# [[bench]]
# name = "my_benchmark"
# harness = false

[features]
# for adhoc hacking
adhoc = []

[dependencies.pyo3]
version = "0.18.1"
# multiple-pymethods requires Rust 1.62 or above
# features = ["extension-module", "anyhow", "abi3-py39", "multiple-pymethods"]
features = ["extension-module", "anyhow", "abi3-py38"]

[lib]
name = "spdkit"
crate-type = ["cdylib"]
# e345323a ends here
